# Bank-Reconciliation-Environment

./: Dockerfile  README.md  inference.py  pyproject.toml
baseline/: inference.py
env/: __init__.py  data_generator.py
openenv-bank-reconciliation/: .env  Dockerfile  baseline_results.json  openenv.yaml  requirements.txt  run_baseline.py
openenv-bank-reconciliation/api/: main.py
openenv-bank-reconciliation/env/: environment.py  graders.py  models.py
server/: app.py
tasks/: __init__.py  task1_categorize.py  task2_decode_upi.py  task3_reconcile.py
