[project]
name = "bank-reconciliation"
version = "1.0.0"
description = "AI environment for reconciling Indian bank statements"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "openai>=1.0.0",
    "faker>=20.0.0",
    "rapidfuzz>=3.0.0",
    "python-dotenv>=1.0.0",
    "openenv-core>=0.1.0",
]

[project.scripts]
server = "server.app:main"

[tool.openenv]
name = "bank-reconciliation"
dockerfile = "Dockerfile"
tasks = ["categorize", "decode_upi", "full_reconciliation"]
